# Tijson

./: .clang-format  .vcpkg_packages.txt  CMakeLists.txt  LICENSE  README.md  README_zh_CN.md  build.sh  build_test.sh  vcpkg.json  vcpkg_init.sh
include/: tijson.h
sample/: sample.cc  test.cc
test/: enum_help.h  macro_help.h  test.cc  test_error_code.cc  test_parse_array.cc  test_parse_literal.cc  test_parse_number.cc  test_parse_object.cc  test_parse_string.cc  test_stringify.cc  test_utils.h  tijson.cc
